Добавил инлайн кнопки для редактирования и удаления теста